# fit-connect-rs

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md
src/: cli.rs  main.rs  utils.rs
src/modules/: mod.rs  strava.rs  withings.rs
