[package]
name = "fit-connect-rs"
version = "0.1.0"
edition = "2021"
description = "fit syncing tool"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
withings-rs = {path = "../withings-rs"}
strava-client-rs = {path = "../strava-client-rs"}
simple_logger = "4.3.3"
chrono = "0.4.34"
clap = { version = "4.5.23", features = ["env", "derive"] }
