[package]
name = "fit-connect-rs"
version = "0.1.0"
edition = "2021"
description = "fit syncing tool"


[dependencies]
withings-rs = {path = "../withings-rs"}
strava-client-rs = {path = "../strava-client-rs"}
simple_logger = "4.3.3"
chrono = "0.4.34"
clap = { version = "4.5.23", features = ["env", "derive"] }
colored_json = "5.0.0"
miette = { version = "7.5.0", features = ["derive", "fancy", "default"] }
thiserror = "1.0.69"