[package]
name = "fit-connect-rs"
version = "0.1.0"
edition = "2021"
authors = ["Quenten Griffith <qgriffith@gmail.com>"]
description = "fit syncing tool"
repository = "https://github.com/qgriffith/fit-connect-rs"
homepage = "https://github.com/qgriffith/fit-connect-rs"
license = "MIT"
keywords = ["strava", "binary", "withings", "client", "fit sync"]
readme = "README.md"

[dependencies]
withings-rs = "0.1.3"
strava-client-rs = "0.2.4"
simple_logger = "4.3.3"
chrono = "0.4.34"
clap = { version = "4.5.23", features = ["env", "derive"] }
colored_json = "5.0.0"
miette = { version = "7.5.0", features = ["derive", "fancy", "default"] }
thiserror = "1.0.69"